--- a/documentation/bibliography.bib
+++ b/documentation/bibliography.bib
@@ -1,4 +1,4 @@
-@BOOK{DUMMY:1,
+@BOOK{DUMMY:BCS1,
 AUTHOR="John Doe",
 TITLE="The Book without Title",
 PUBLISHER="Dummy Publisher",
@@ -17,6 +17,13 @@ AUTHOR="Alfred V Aho and others",
 TITLE="Compilers: Princliples, Techniques \& Tools (second edition)",
 PUBLISHER="Pearson Education",
 YEAR="2007",
+}
+
+@BOOK{assembly
+AUTHOR="Duntermann Jeff",
+TITLE="Assembly language step-by-step: programming with DOS and Linux"
+PUBLISHER="Wiley",
+YEAR="1992",
 }
 
 @inproceedings{compilerForTeachingCompilers,
@@ -91,3 +98,18 @@ title = {John Warner Backus},
 howpublished = {\url{https://www.nytimes.com/2007/03/20/business/20backus.html}},
 note = {Accessed: 2020-11-27}
 }
+
+@misc{bcs,
+author="BCS",
+title="BCS Code of Conduct",
+howpublished = {\url{https://www.bcs.org/membership/become-a-member/bcs-code-of-conduct/}},
+year={n.d.},
+}
+
+@misc{nasm,
+author="NASM",
+title="NASM - The Netwide Assembler",
+howpublished = {\url{https://www.nasm.us/xdoc/2.15.05/html/nasmdoc1.html#section-1.1}},
+year={n.d.},
+}
+
