--- a/documentation/bibliography.bib
+++ b/documentation/bibliography.bib
@@ -20,7 +20,7 @@ YEAR="2007",
 }
 
 @BOOK{assembly
-AUTHOR="Duntermann Jeff",
+AUTHOR={Duntermann, Jeff},
 TITLE="Assembly language step-by-step: programming with DOS and Linux"
 PUBLISHER="Wiley",
 YEAR="1992",
@@ -110,6 +110,13 @@ year={n.d.},
 author="NASM",
 title="NASM - The Netwide Assembler",
 howpublished = {\url{https://www.nasm.us/xdoc/2.15.05/html/nasmdoc1.html#section-1.1}},
+year={n.d.},
+}
+
+@misc{gas&masm,
+author="Ray Toal",
+title="x86 Assembly Language Programming",
+howpublished = {\url{https://cs.lmu.edu/~ray/notes/x86assembly/}},
 year={n.d.},
 }
 
