--- a/documentation/bibliography.bib
+++ b/documentation/bibliography.bib
@@ -19,9 +19,9 @@ PUBLISHER="Pearson Education",
 YEAR="2007",
 }
 
-@BOOK{assembly
+@BOOK{assembly,
 AUTHOR={Duntermann, Jeff},
-TITLE="Assembly language step-by-step: programming with DOS and Linux"
+TITLE="Assembly language step-by-step: programming with DOS and Linux",
 PUBLISHER="Wiley",
 YEAR="1992",
 }
@@ -103,20 +103,20 @@ note = {Accessed: 2020-11-27}
 author="BCS",
 title="BCS Code of Conduct",
 howpublished = {\url{https://www.bcs.org/membership/become-a-member/bcs-code-of-conduct/}},
-year={n.d.},
+year={n.d.}
 }
 
 @misc{nasm,
 author="NASM",
 title="NASM - The Netwide Assembler",
 howpublished = {\url{https://www.nasm.us/xdoc/2.15.05/html/nasmdoc1.html#section-1.1}},
-year={n.d.},
+year={n.d.}
 }
 
 @misc{gas&masm,
 author="Ray Toal",
 title="x86 Assembly Language Programming",
 howpublished = {\url{https://cs.lmu.edu/~ray/notes/x86assembly/}},
-year={n.d.},
+year={n.d.}
 }
 
